--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,30 @@
-volumes:
-  etc_wireguard:
-
 services:
   wg-easy:
     environment:
       # Change Language:
       # (Supports: en, ua, ru, tr, no, pl, fr, de, ca, es, ko, vi, nl, is, pt, chs, cht, it, th, hi)
-      - LANG=de
+      - LANG=chs
       # ⚠️ Required:
       # Change this to your host's public address
-      - WG_HOST=raspberrypi.local
+      - WG_HOST=easywireguard.mynameiszt.eu.org
 
-      # Optional:
-      # - PASSWORD=easywireguard.mynameiszt.eu.org
-      # - PASSWORD_HASH=6d774450f32f8a849c2f29fce666e894e678b6c0a356e5118096b03cc3989c78
-      # - PORT=51821
-      # - WG_PORT=51820
-      # - WG_CONFIG_PORT=92820
-      # - WG_DEFAULT_ADDRESS=10.8.0.x
-      # - WG_DEFAULT_DNS=1.1.1.1
-      # - WG_MTU=1420
-      # - WG_ALLOWED_IPS=192.168.15.0/24, 10.0.1.0/24
-      # - WG_PERSISTENT_KEEPALIVE=25
-      # - WG_PRE_UP=echo "Pre Up" > /etc/wireguard/pre-up.txt
-      # - WG_POST_UP=echo "Post Up" > /etc/wireguard/post-up.txt
-      # - WG_PRE_DOWN=echo "Pre Down" > /etc/wireguard/pre-down.txt
-      # - WG_POST_DOWN=echo "Post Down" > /etc/wireguard/post-down.txt
-      # - UI_TRAFFIC_STATS=true
-      # - UI_CHART_TYPE=0 # (0 Charts disabled, 1 # Line chart, 2 # Area chart, 3 # Bar chart)
+  #  Optional:
+      - PASSWORD=easywireguard.mynameiszt.eu.org
+      - PASSWORD_HASH=6d774450f32f8a849c2f29fce666e894e678b6c0a356e5118096b03cc3989c78
+      - PORT=51821
+      - WG_PORT=51820
+      - WG_CONFIG_PORT=92820
+      - WG_DEFAULT_ADDRESS=10.8.0.x
+      - WG_DEFAULT_DNS=1.1.1.1
+      - WG_MTU=1420
+      - WG_ALLOWED_IPS=192.168.15.0/24, 10.0.1.0/24
+      - WG_PERSISTENT_KEEPALIVE=25
+      - WG_PRE_UP=echo "Pre Up" > /etc/wireguard/pre-up.txt
+      - WG_POST_UP=echo "Post Up" > /etc/wireguard/post-up.txt
+      - WG_PRE_DOWN=echo "Pre Down" > /etc/wireguard/pre-down.txt
+      - WG_POST_DOWN=echo "Post Down" > /etc/wireguard/post-down.txt
+      - UI_TRAFFIC_STATS=true
+      - UI_CHART_TYPE=0 # (0 Charts disabled, 1 # Line chart, 2 # Area chart, 3 # Bar chart)
 
     image: ghcr.io/wg-easy/wg-easy
     container_name: wg-easy
